--- a/code/penis_size.ipynb
+++ b/code/penis_size.ipynb
@@ -3,10 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19883a0c-5c50-4803-9a76-022d3205202f",
+   "id": "835c5e99-dc56-4ea3-8a56-129763275275",
    "metadata": {},
    "outputs": [],
    "source": [
+    "using Revise\n",
+    "\n",
     "using OnePiece"
    ]
   },
@@ -276,6 +278,7 @@
     "        \"yaxis\" => Dict(\"title\" => Dict(\"text\" => \"<b>Penis Size / Annual Income</b> (cm / \\$)\")),\n",
     "        \"xaxis\" => Dict(\"title\" => Dict(\"text\" => \"<b>Country</b> (with available data)\")),\n",
     "    ),\n",
+    "    ht = \"../output/penis_size.html\",\n",
     ")"
    ]
   }
