--- a/code/penis_size.ipynb
+++ b/code/penis_size.ipynb
@@ -27,6 +27,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "725dcd49-17ac-49af-8b95-bcf5b7260b3a",
+   "metadata": {},
+   "source": [
+    "https://www.worlddata.info"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "82f9a806-35dc-44cf-85a7-be5a6f928cb4",
@@ -124,6 +132,14 @@
     "Burma\t10.70\t1.66\t6.45\n",
     "Cambodia\t10.04\t1.65\t6.09\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "504c07ef-f71f-42bf-a756-ae452dbc074b",
+   "metadata": {},
+   "source": [
+    "https://www.worlddata.info"
    ]
   },
   {
