Next is Network

--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -15,6 +15,40 @@
     "\n",
     "using OnePiece"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61b98cea-ff36-4a33-9031-4719f831f7f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = convert(Int, 1e3)\n",
+    "\n",
+    "ch_ = 'a':'z'\n",
+    "\n",
+    "an_ = [join(rand(ch_, 8)) for id in 1:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4e310fd-6227-4556-b462-dd58c09c9fb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "an_ = [rand((0, 1)) for id in 1:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8df85eda-ec45-4d5d-afe7-5f10afd6b428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra = rand(an_)"
+   ]
   }
  ],
  "metadata": {
