--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -37,17 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "an_ = [rand((0, 1)) for id in 1:n]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8df85eda-ec45-4d5d-afe7-5f10afd6b428",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ra = rand(an_)"
+    "nu_ = [rand((0:9)) for id in 1:n]\n",
+    "nu_ = [rand(Float64) for id in 1:n]"
    ]
   }
  ],
