Ran. Next is blocking and compressing

--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b98cea-ff36-4a33-9031-4719f831f7f3",
+   "id": "c446dd11-d264-45e4-a730-89704f9de821",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,8 @@
     "\n",
     "ch_ = 'a':'z'\n",
     "\n",
-    "an_ = [join(rand(ch_, 8)) for id in 1:n]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4e310fd-6227-4556-b462-dd58c09c9fb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "an_ = [join(rand(ch_, 8)) for id in 1:n]\n",
+    "\n",
     "nu_ = [rand((0:9)) for id in 1:n]\n",
     "nu_ = [rand(Float64) for id in 1:n]"
    ]
