--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f624c9-74d9-45d6-9478-1c1673a91c2f",
+   "id": "93a7bbd7-df07-4fc7-91dd-d0dcf2e62a43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = convert(Int, 1e3)\n",
+    "n = 10^3\n",
     "\n",
     "ch_ = 'a':'z'\n",
     "\n",
-    "an_ = [join(rand(ch_, 8)) for id in 1:n]\n",
+    "an_ = [join(rand(ch_, 8)) for _ in 1:n]\n",
     "\n",
-    "nu_ = [rand((0:9)) for id in 1:n]\n",
-    "nu_ = [rand(Float64) for id in 1:n]"
+    "nu_ = [rand((0:9)) for _ in 1:n]\n",
+    "nu_ = [rand(Float64) for _ in 1:n]"
    ]
   }
  ],
