--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -1,11 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93a7bbd7-df07-4fc7-91dd-d0dcf2e62a43",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "using Revise\n",
     "\n",
@@ -14,14 +11,14 @@
     "using DataFrames\n",
     "\n",
     "using OnePiece"
-   ]
+   ],
+   "id": "93a7bbd7-df07-4fc7-91dd-d0dcf2e62a43",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c446dd11-d264-45e4-a730-89704f9de821",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "n = 10^3\n",
     "\n",
@@ -31,22 +28,25 @@
     "\n",
     "nu_ = [rand((0:9)) for _ in 1:n]\n",
     "nu_ = [rand(Float64) for _ in 1:n]"
-   ]
+   ],
+   "id": "c446dd11-d264-45e4-a730-89704f9de821",
+   "metadata": {},
+   "execution_count": null
   }
  ],
+ "nbformat_minor": 5,
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.8.2",
-   "language": "julia",
-   "name": "julia-1.8"
-  },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.8.2"
+  },
+  "kernelspec": {
+   "name": "julia-1.8",
+   "display_name": "Julia 1.8.2",
+   "language": "julia"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat": 4
 }
