--- a/code/penis_size.ipynb
+++ b/code/penis_size.ipynb
@@ -1,45 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "835c5e99-dc56-4ea3-8a56-129763275275",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "using Revise\n",
     "\n",
     "using OnePiece"
-   ]
+   ],
+   "id": "835c5e99-dc56-4ea3-8a56-129763275275",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0175e966-7e7a-4f2f-a811-ff07f45da2ac",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "function tabulate(st)\n",
     "\n",
     "    OnePiece.DataFrame.make([split(li, \"\\t\") for li in split(st, \"\\n\", keepempty = false)])\n",
     "\n",
     "end"
-   ]
+   ],
+   "id": "0175e966-7e7a-4f2f-a811-ff07f45da2ac",
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "id": "725dcd49-17ac-49af-8b95-bcf5b7260b3a",
-   "metadata": {},
    "source": [
     "https://www.worlddata.info"
-   ]
+   ],
+   "id": "725dcd49-17ac-49af-8b95-bcf5b7260b3a",
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82f9a806-35dc-44cf-85a7-be5a6f928cb4",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "pe = tabulate(\"\"\"\n",
     "Country\tErect length (cm)\tBody size (m)\tPercentage of height\n",
@@ -132,22 +129,22 @@
     "Burma\t10.70\t1.66\t6.45\n",
     "Cambodia\t10.04\t1.65\t6.09\n",
     "\"\"\")"
-   ]
+   ],
+   "id": "82f9a806-35dc-44cf-85a7-be5a6f928cb4",
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "id": "504c07ef-f71f-42bf-a756-ae452dbc074b",
-   "metadata": {},
    "source": [
     "https://www.worlddata.info"
-   ]
+   ],
+   "id": "504c07ef-f71f-42bf-a756-ae452dbc074b",
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b43f1a38-8c19-45a0-95df-c9df1508defc",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "mo = tabulate(\"\"\"\n",
     "Rank\tCountry\tAvg. income per year\tAvg. income per month\n",
@@ -220,24 +217,24 @@
     "67\tBurma\t1140\t95\n",
     "68\tAfghanistan\t500\t42\n",
     "\"\"\")"
-   ]
+   ],
+   "id": "b43f1a38-8c19-45a0-95df-c9df1508defc",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1ca23ba-9fff-441f-ac73-936563413270",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "co_ = intersect(pe[!, \"Country\"], mo[!, \"Country\"])"
-   ]
+   ],
+   "id": "b1ca23ba-9fff-441f-ac73-936563413270",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b7bea3f-162e-452d-89e2-0bf4f4880c67",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "id_ = indexin(pe[!, \"Country\"], co_)\n",
     "\n",
@@ -246,14 +243,14 @@
     "pe = pe[go_, :][id_[go_], :]\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "4b7bea3f-162e-452d-89e2-0bf4f4880c67",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c49f26bc-1344-49a6-a456-adccaeee8b92",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "id_ = indexin(mo[!, \"Country\"], co_)\n",
     "\n",
@@ -262,28 +259,28 @@
     "mo = mo[go_, :][id_[go_], :]\n",
     "\n",
     ";"
-   ]
+   ],
+   "id": "c49f26bc-1344-49a6-a456-adccaeee8b92",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bd359c3-8948-4537-aeac-67ec4d6472bb",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "pe_ = [parse(Float64, st) for st in pe[!, \"Erect length (cm)\"]]\n",
     "\n",
     "mo_ = [parse(Float64, st) for st in mo[!, \"Avg. income per year\"]]\n",
     "\n",
     "y, x = OnePiece.Vector.sort_like(([pe / mo for (pe, mo) in zip(pe_, mo_)], co_), true)"
-   ]
+   ],
+   "id": "2bd359c3-8948-4537-aeac-67ec4d6472bb",
+   "metadata": {},
+   "execution_count": null
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa455a5f-35d4-4c84-a25b-c2e35df4fb89",
-   "metadata": {},
    "outputs": [],
+   "cell_type": "code",
    "source": [
     "OnePiece.Plot.plot_bar(\n",
     "    [y],\n",
@@ -296,22 +293,25 @@
     "    ),\n",
     "    ht = \"../output/penis_size.html\",\n",
     ")"
-   ]
+   ],
+   "id": "aa455a5f-35d4-4c84-a25b-c2e35df4fb89",
+   "metadata": {},
+   "execution_count": null
   }
  ],
+ "nbformat_minor": 5,
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.8.2",
-   "language": "julia",
-   "name": "julia-1.8"
-  },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
    "version": "1.8.2"
+  },
+  "kernelspec": {
+   "name": "julia-1.8",
+   "display_name": "Julia 1.8.2",
+   "language": "julia"
   }
  },
- "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat": 4
 }
