Next is _plot_mountain.jl 2

--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -32,6 +32,14 @@
    "id": "c446dd11-d264-45e4-a730-89704f9de821",
    "metadata": {},
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Iterate data frame"
+   ],
+   "id": "05cbe9c7-bb3f-4a70-874a-5f0b59a0db18",
+   "metadata": {}
   }
  ],
  "nbformat_minor": 5,
