--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "using DataFrames\n",
     "\n",
+    "using Random\n",
+    "\n",
     "using OnePiece"
    ],
    "id": "93a7bbd7-df07-4fc7-91dd-d0dcf2e62a43",
@@ -24,12 +26,63 @@
     "\n",
     "ch_ = 'a':'z'\n",
     "\n",
-    "an_ = [join(rand(ch_, 8)) for _ in 1:n]\n",
+    "st_ = [join(rand(ch_, 8)) for _ in 1:n]\n",
     "\n",
     "nu_ = [rand((0:9)) for _ in 1:n]\n",
-    "nu_ = [rand(Float64) for _ in 1:n]"
+    "\n",
+    "nu_ = rand(Float64, n);"
    ],
-   "id": "c446dd11-d264-45e4-a730-89704f9de821",
+   "id": "4bf7e2a1-0044-4ec6-89a0-6fa9822e515e",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "id_ = randperm(n)"
+   ],
+   "id": "3a0430a2-5da0-4eaa-b2ed-43bb8cf9bb71",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime permute!(nu_, id_);"
+   ],
+   "id": "e2e8f5f5-06c3-4ce5-843a-f3d881530ba8",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime nu_[id_];"
+   ],
+   "id": "87549a30-1a20-4c4f-8f70-9481d8ed7a64",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime permute!($nu_, $id_);"
+   ],
+   "id": "856cb32e-45b4-4406-843b-894a0f5e4342",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime $nu_[$id_];"
+   ],
+   "id": "19780139-a7a4-492e-9d38-264e284efabf",
    "metadata": {},
    "execution_count": null
   },
@@ -38,7 +91,7 @@
    "source": [
     "## Iterate data frame"
    ],
-   "id": "05cbe9c7-bb3f-4a70-874a-5f0b59a0db18",
+   "id": "89c51f00-8202-4a87-b1b6-30c61d2c8435",
    "metadata": {}
   }
  ],
