--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -37,6 +37,14 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## permute"
+   ],
+   "id": "ddb62479-18d0-4231-a70e-9a4897d5b508",
+   "metadata": {}
+  },
+  {
    "outputs": [],
    "cell_type": "code",
    "source": [
