--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -39,6 +39,14 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## display"
+   ],
+   "id": "ec1aa8bf-2f8c-49ee-8f96-85c9ad56fd3d",
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## permute"
    ],
    "id": "ddb62479-18d0-4231-a70e-9a4897d5b508",
