Use ../scr/TEMPLATE.jl

--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -4,15 +4,7 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "using Revise\n",
-    "\n",
-    "using BenchmarkTools\n",
-    "\n",
-    "using DataFrames\n",
-    "\n",
-    "using Random\n",
-    "\n",
-    "using OnePiece"
+    "include(\"../src/Play.jl\")"
    ],
    "id": "93a7bbd7-df07-4fc7-91dd-d0dcf2e62a43",
    "metadata": {},
