--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -14,43 +14,37 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "n = 10^3\n",
+    "#\n",
+    "n = 10^2\n",
     "\n",
+    "#\n",
     "ch_ = 'a':'z'\n",
     "\n",
     "st_ = [join(rand(ch_, 8)) for _ in 1:n]\n",
     "\n",
-    "nu_ = [rand((0:9)) for _ in 1:n]\n",
+    "#\n",
+    "fl_ = rand(Float64, n)\n",
     "\n",
-    "nu_ = rand(Float64, n);"
+    "#\n",
+    "in_ = [rand(0:9) for _ in 1:n]\n",
+    "\n",
+    ";"
    ],
    "id": "4bf7e2a1-0044-4ec6-89a0-6fa9822e515e",
    "metadata": {},
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## display"
-   ],
-   "id": "ec1aa8bf-2f8c-49ee-8f96-85c9ad56fd3d",
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## permute"
-   ],
-   "id": "ddb62479-18d0-4231-a70e-9a4897d5b508",
-   "metadata": {}
-  },
-  {
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "id_ = randperm(n)"
+    "da = DataFrame(\"C1\" => st_, \"C2\" => fl_, \"C3\" => in_)\n",
+    "\n",
+    "insertcols!(da, \"C4\" => [rand(vcat(collect(ro), missing)) for ro in eachrow(da)])\n",
+    "\n",
+    ";"
    ],
-   "id": "3a0430a2-5da0-4eaa-b2ed-43bb8cf9bb71",
+   "id": "a5f22a55-6f0e-4fed-bd0a-32a38ef6e429",
    "metadata": {},
    "execution_count": null
   },
@@ -58,9 +52,17 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "@btime permute!(nu_, id_);"
+    "function fudi(da)\n",
+    "\n",
+    "    for id in 1:size(da, 1)\n",
+    "\n",
+    "        [ismissing(an) for an in da[id, :]]\n",
+    "\n",
+    "    end\n",
+    "\n",
+    "end"
    ],
-   "id": "e2e8f5f5-06c3-4ce5-843a-f3d881530ba8",
+   "id": "67ed0ffa-aa59-48b6-8a6e-03a54d84dbbd",
    "metadata": {},
    "execution_count": null
   },
@@ -68,9 +70,9 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "@btime nu_[id_];"
+    "@btime fudi(da)"
    ],
-   "id": "87549a30-1a20-4c4f-8f70-9481d8ed7a64",
+   "id": "c78d7ddb-d002-4bb6-86b1-55efe5b9d7d2",
    "metadata": {},
    "execution_count": null
   },
@@ -78,9 +80,19 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "@btime permute!($nu_, $id_);"
+    "function fumi(da)\n",
+    "\n",
+    "    ma = Matrix(da)\n",
+    "\n",
+    "    for id in 1:size(ma, 1)\n",
+    "\n",
+    "        [ismissing(an) for an in ma[id, :]]\n",
+    "\n",
+    "    end\n",
+    "\n",
+    "end"
    ],
-   "id": "856cb32e-45b4-4406-843b-894a0f5e4342",
+   "id": "8caae14e-3b90-45fe-b714-d365e488a400",
    "metadata": {},
    "execution_count": null
   },
@@ -88,19 +100,67 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "@btime $nu_[$id_];"
+    "@btime fumi(da)"
    ],
-   "id": "19780139-a7a4-492e-9d38-264e284efabf",
+   "id": "9d78a45c-7e7c-47ad-aa3c-3e8cbb7ab1ed",
    "metadata": {},
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "## Iterate data frame"
+    "function fude(da)\n",
+    "\n",
+    "    for ro in eachrow(da)\n",
+    "\n",
+    "        [ismissing(an) for an in ro]\n",
+    "\n",
+    "    end\n",
+    "\n",
+    "end"
    ],
-   "id": "89c51f00-8202-4a87-b1b6-30c61d2c8435",
-   "metadata": {}
+   "id": "bdfbcacf-824b-4bd9-b64f-1a5449bab939",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime fude(da)"
+   ],
+   "id": "1cca9eaf-b195-4400-a456-89732bc72f71",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "function fume(da)\n",
+    "\n",
+    "    for ro in eachrow(Matrix(da))\n",
+    "\n",
+    "        [ismissing(an) for an in ro]\n",
+    "\n",
+    "    end\n",
+    "\n",
+    "end"
+   ],
+   "id": "2dce859a-db02-4391-9438-dba7f90ae1c9",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime fume(da)"
+   ],
+   "id": "7feb1e5f-47e1-4861-913c-0051774f1348",
+   "metadata": {},
+   "execution_count": null
   }
  ],
  "nbformat_minor": 5,
