--- a/code/penis_size.ipynb
+++ b/code/penis_size.ipynb
@@ -4,9 +4,7 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "using Revise\n",
-    "\n",
-    "using OnePiece"
+    "include(\"../src/Play.jl\")"
    ],
    "id": "835c5e99-dc56-4ea3-8a56-129763275275",
    "metadata": {},
@@ -16,207 +14,17 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "function tabulate(st)\n",
-    "\n",
-    "    OnePiece.DataFrame.make([split(li, \"\\t\") for li in split(st, \"\\n\", keepempty = false)])\n",
-    "\n",
-    "end"
+    "co_x_pe_x_nu = tabulate(read(\"../input/country_x_penis_x_number.txt\", String))"
    ],
-   "id": "0175e966-7e7a-4f2f-a811-ff07f45da2ac",
+   "id": "1024a2a8-9145-4248-8ea3-376af8058a2f",
    "metadata": {},
    "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "https://www.worlddata.info"
-   ],
-   "id": "725dcd49-17ac-49af-8b95-bcf5b7260b3a",
-   "metadata": {}
   },
   {
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "pe = tabulate(\"\"\"\n",
-    "Country\tErect length (cm)\tBody size (m)\tPercentage of height\n",
-    "Ecuador\t17.61\t1.67\t10.54\n",
-    "Cameroon\t16.67\t1.71\t9.75\n",
-    "Bolivia\t16.51\t1.68\t9.84\n",
-    "Sudan\t16.47\t1.71\t9.63\n",
-    "Haiti\t16.01\t1.72\t9.32\n",
-    "Senegal\t15.89\t1.75\t9.09\n",
-    "Gambia\t15.88\t1.68\t9.47\n",
-    "Cuba\t15.87\t1.73\t9.16\n",
-    "Netherlands\t15.87\t1.84\t8.65\n",
-    "Zambia\t15.78\t1.67\t9.45\n",
-    "France\t15.74\t1.78\t8.83\n",
-    "Angola\t15.73\t1.68\t9.38\n",
-    "Canada\t15.71\t1.78\t8.80\n",
-    "Egypt\t15.69\t1.73\t9.08\n",
-    "Zimbabwe\t15.68\t1.70\t9.23\n",
-    "Georgia\t15.61\t1.75\t8.92\n",
-    "Paraguay\t15.53\t1.73\t8.97\n",
-    "Chad\t15.39\t1.71\t9.01\n",
-    "Italy\t15.35\t1.74\t8.81\n",
-    "Central African Republic\t15.33\t1.68\t9.11\n",
-    "Colombia\t15.26\t1.71\t8.91\n",
-    "Ivory Coast\t15.22\t1.68\t9.07\n",
-    "Brazil\t15.22\t1.75\t8.69\n",
-    "Sweden\t15.08\t1.80\t8.36\n",
-    "Bulgaria\t15.02\t1.73\t8.66\n",
-    "Costa Rica\t15.01\t1.74\t8.64\n",
-    "Honduras\t15.00\t1.69\t8.87\n",
-    "Hungary\t14.99\t1.76\t8.50\n",
-    "Mexico\t14.92\t1.70\t8.78\n",
-    "Denmark\t14.88\t1.82\t8.19\n",
-    "Argentina\t14.88\t1.74\t8.54\n",
-    "El Salvador\t14.88\t1.70\t8.75\n",
-    "Serbia\t14.87\t1.80\t8.24\n",
-    "Belgium\t14.77\t1.79\t8.25\n",
-    "Croatia\t14.77\t1.81\t8.18\n",
-    "Latvia\t14.69\t1.80\t8.16\n",
-    "Belarus\t14.63\t1.78\t8.21\n",
-    "Chile\t14.59\t1.73\t8.46\n",
-    "Austria\t14.53\t1.78\t8.15\n",
-    "Germany\t14.52\t1.80\t8.07\n",
-    "Algeria\t14.49\t1.74\t8.34\n",
-    "Democratic Republic of the Congo\t14.48\t1.68\t8.64\n",
-    "Australia\t14.46\t1.79\t8.10\n",
-    "Nigeria\t14.38\t1.70\t8.47\n",
-    "Switzerland\t14.35\t1.79\t8.04\n",
-    "Norway\t14.34\t1.80\t7.95\n",
-    "Poland\t14.29\t1.80\t7.93\n",
-    "Albania\t14.19\t1.74\t8.17\n",
-    "Cape Verde\t14.05\t1.75\t8.04\n",
-    "New Zealand\t13.99\t1.78\t7.88\n",
-    "North Macedonia\t13.98\t1.76\t7.95\n",
-    "Ukraine\t13.97\t1.80\t7.75\n",
-    "Spain\t13.85\t1.76\t7.88\n",
-    "Finland\t13.77\t1.80\t7.64\n",
-    "Libya\t13.74\t1.75\t7.84\n",
-    "Azerbaijan\t13.72\t1.73\t7.92\n",
-    "India\t13.71\t1.66\t8.28\n",
-    "Afghanistan\t13.69\t1.68\t8.16\n",
-    "Israel\t13.60\t1.76\t7.75\n",
-    "United States\t13.58\t1.77\t7.68\n",
-    "Japan\t13.56\t1.72\t7.90\n",
-    "Turkmenistan\t13.48\t1.73\t7.78\n",
-    "Venezuela\t13.33\t1.73\t7.71\n",
-    "Greece\t13.30\t1.79\t7.44\n",
-    "Russia\t13.21\t1.76\t7.50\n",
-    "South Korea\t13.16\t1.75\t7.52\n",
-    "Armenia\t13.14\t1.73\t7.59\n",
-    "United Kingdom\t13.13\t1.78\t7.38\n",
-    "China\t13.07\t1.75\t7.49\n",
-    "Turkey\t12.99\t1.76\t7.39\n",
-    "Ireland\t12.78\t1.79\t7.16\n",
-    "Mongolia\t12.77\t1.70\t7.50\n",
-    "Romania\t12.73\t1.77\t7.18\n",
-    "Yemen\t12.72\t1.63\t7.81\n",
-    "Taiwan\t12.60\t1.73\t7.28\n",
-    "Pakistan\t12.20\t1.67\t7.32\n",
-    "Iran\t11.95\t1.75\t6.84\n",
-    "Indonesia\t11.67\t1.66\t7.05\n",
-    "Singapore\t11.53\t1.73\t6.66\n",
-    "Malaysia\t11.49\t1.68\t6.82\n",
-    "Vietnam\t11.47\t1.68\t6.83\n",
-    "Thailand\t11.45\t1.71\t6.68\n",
-    "Bangladesh\t11.20\t1.65\t6.81\n",
-    "Hong Kong\t11.19\t1.74\t6.42\n",
-    "Sri Lanka\t10.89\t1.67\t6.50\n",
-    "Philippines\t10.85\t1.65\t6.59\n",
-    "Burma\t10.70\t1.66\t6.45\n",
-    "Cambodia\t10.04\t1.65\t6.09\n",
-    "\"\"\")"
-   ],
-   "id": "82f9a806-35dc-44cf-85a7-be5a6f928cb4",
-   "metadata": {},
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "https://www.worlddata.info"
-   ],
-   "id": "504c07ef-f71f-42bf-a756-ae452dbc074b",
-   "metadata": {}
-  },
-  {
-   "outputs": [],
-   "cell_type": "code",
-   "source": [
-    "mo = tabulate(\"\"\"\n",
-    "Rank\tCountry\tAvg. income per year\tAvg. income per month\n",
-    "1\tMonaco\t186080\t15507\n",
-    "2\tBermuda\t116540\t9712\n",
-    "3\tSwitzerland\t90360\t7530\n",
-    "4\tNorway\t84090\t7008\n",
-    "5\tLuxembourg\t81110\t6759\n",
-    "6\tIreland\t74520\t6210\n",
-    "7\tUnited States\t70430\t5869\n",
-    "8\tDenmark\t68110\t5676\n",
-    "9\tIceland\t64410\t5368\n",
-    "10\tSingapore\t64010\t5334\n",
-    "11\tSweden\t58890\t4908\n",
-    "12\tQatar\t57120\t4760\n",
-    "13\tAustralia\t56760\t4730\n",
-    "14\tNetherlands\t56370\t4698\n",
-    "15\tHong Kong\t54450\t4538\n",
-    "16\tFinland\t53660\t4472\n",
-    "17\tAustria\t52210\t4351\n",
-    "18\tGermany\t51040\t4253\n",
-    "19\tBelgium\t50510\t4209\n",
-    "20\tIsrael\t49560\t4130\n",
-    "21\tCanada\t48310\t4026\n",
-    "22\tMacao\t46730\t3894\n",
-    "23\tUnited Kingdom\t45380\t3782\n",
-    "24\tNew Zealand\t45340\t3778\n",
-    "25\tFrance\t43880\t3657\n",
-    "26\tJapan\t42620\t3552\n",
-    "27\tUnited Arab Emirates\t39410\t3284\n",
-    "28\tItaly\t35710\t2976\n",
-    "29\tSouth Korea\t34980\t2915\n",
-    "30\tBrunei\t31510\t2626\n",
-    "31\tSpain\t29740\t2478\n",
-    "32\tPortugal\t23730\t1978\n",
-    "33\tSaudi Arabia\t22270\t1856\n",
-    "34\tGreece\t20140\t1678\n",
-    "35\tHungary\t17740\t1478\n",
-    "36\tPoland\t16670\t1389\n",
-    "37\tRomania\t14170\t1181\n",
-    "38\tChina\t11890\t991\n",
-    "39\tRussia\t11600\t967\n",
-    "40\tMalaysia\t10930\t911\n",
-    "41\tBulgaria\t10720\t893\n",
-    "42\tArgentina\t10050\t838\n",
-    "43\tTurkey\t9830\t819\n",
-    "44\tMexico\t9380\t782\n",
-    "45\tSerbia\t8440\t703\n",
-    "46\tBrazil\t7720\t643\n",
-    "47\tThailand\t7260\t605\n",
-    "48\tSouth Africa\t6440\t537\n",
-    "49\tColombia\t6160\t513\n",
-    "50\tEcuador\t5930\t494\n",
-    "51\tIndonesia\t4140\t345\n",
-    "52\tUkraine\t4120\t343\n",
-    "53\tSri Lanka\t3820\t318\n",
-    "54\tPhilippines\t3640\t303\n",
-    "55\tVietnam\t3560\t297\n",
-    "56\tEgypt\t3510\t293\n",
-    "57\tIran\t3370\t281\n",
-    "58\tMorocco\t3350\t279\n",
-    "59\tBangladesh\t2620\t218\n",
-    "60\tIndia\t2170\t181\n",
-    "61\tNigeria\t2100\t175\n",
-    "62\tTimor-Leste\t1940\t162\n",
-    "63\tCameroon\t1590\t133\n",
-    "64\tCambodia\t1550\t129\n",
-    "65\tPakistan\t1500\t125\n",
-    "66\tNepal\t1230\t103\n",
-    "67\tBurma\t1140\t95\n",
-    "68\tAfghanistan\t500\t42\n",
-    "\"\"\")"
+    "co_x_in_x_nu = tabulate(read(\"../input/country_x_income_x_number.txt\", String))"
    ],
    "id": "b43f1a38-8c19-45a0-95df-c9df1508defc",
    "metadata": {},
@@ -226,9 +34,13 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "co_ = intersect(pe[!, \"Country\"], mo[!, \"Country\"])"
+    "cop_ = co_x_pe_x_nu[!, \"Country\"]\n",
+    "\n",
+    "coi_ = co_x_in_x_nu[!, \"Country\"]\n",
+    "\n",
+    ";"
    ],
-   "id": "b1ca23ba-9fff-441f-ac73-936563413270",
+   "id": "99a48a24-cd73-474c-8b6f-9f6208260716",
    "metadata": {},
    "execution_count": null
   },
@@ -236,15 +48,13 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "id_ = indexin(pe[!, \"Country\"], co_)\n",
+    "di_ = sort(symdiff(cop_, coi_))\n",
     "\n",
-    "go_ = [!isnothing(id) for id in id_]\n",
+    "println(di_)\n",
     "\n",
-    "pe = pe[go_, :][id_[go_], :]\n",
-    "\n",
-    ";"
+    "co_ = intersect(cop_, coi_)"
    ],
-   "id": "4b7bea3f-162e-452d-89e2-0bf4f4880c67",
+   "id": "e32c94d0-8410-4563-8372-abe405be663f",
    "metadata": {},
    "execution_count": null
   },
@@ -252,13 +62,25 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "id_ = indexin(mo[!, \"Country\"], co_)\n",
+    "id_ = indexin(cop_, co_)\n",
     "\n",
     "go_ = [!isnothing(id) for id in id_]\n",
     "\n",
-    "mo = mo[go_, :][id_[go_], :]\n",
+    "co_x_pe_x_nu = co_x_pe_x_nu[go_, :][id_[go_], :]"
+   ],
+   "id": "8518da20-7ee9-494b-b757-c945a06c7bc1",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "id_ = indexin(coi_, co_)\n",
     "\n",
-    ";"
+    "go_ = [!isnothing(id) for id in id_]\n",
+    "\n",
+    "co_x_in_x_nu = co_x_in_x_nu[go_, :][id_[go_], :]"
    ],
    "id": "c49f26bc-1344-49a6-a456-adccaeee8b92",
    "metadata": {},
@@ -268,33 +90,25 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "pe_ = [parse(Float64, st) for st in pe[!, \"Erect length (cm)\"]]\n",
+    "pe_ = [parse(Float64, st) for st in co_x_pe_x_nu[!, \"Erect length (cm)\"]]\n",
     "\n",
-    "mo_ = [parse(Float64, st) for st in mo[!, \"Avg. income per year\"]]\n",
+    "in_ = [parse(Float64, st) for st in co_x_in_x_nu[!, \"Avg. income per year\"]]\n",
     "\n",
-    "y, x = OnePiece.Vector.sort_like(([pe / mo for (pe, mo) in zip(pe_, mo_)], co_), true)"
-   ],
-   "id": "2bd359c3-8948-4537-aeac-67ec4d6472bb",
-   "metadata": {},
-   "execution_count": null
-  },
-  {
-   "outputs": [],
-   "cell_type": "code",
-   "source": [
+    "y, x = OnePiece.Vector.sort_like(([pe / ic for (pe, ic) in zip(pe_, in_)], co_), true)\n",
+    "\n",
     "OnePiece.Plot.plot_bar(\n",
     "    [y],\n",
     "    [x],\n",
     "    marker_color_ = (\"#20d9ba\",),\n",
     "    layout = Dict(\n",
-    "        \"title\" => Dict(\"text\" => \"🍆🧐\", \"font\" => Dict(\"size\" => 32)),\n",
+    "        \"title\" => Dict(\"text\" => \"🍆💦📏🧐\", \"font\" => Dict(\"size\" => 32)),\n",
     "        \"yaxis\" => Dict(\"title\" => Dict(\"text\" => \"<b>Penis Size / Annual Income</b> (cm / \\$)\")),\n",
-    "        \"xaxis\" => Dict(\"title\" => Dict(\"text\" => \"<b>Country</b> (with available data)\")),\n",
+    "        \"xaxis\" => Dict(\"title\" => Dict(\"text\" => \"<b>Country</b>\")),\n",
     "    ),\n",
-    "    ht = \"../output/penis_size.html\",\n",
+    "    ht = \"../output/penis_size_per_income.html\",\n",
     ")"
    ],
-   "id": "aa455a5f-35d4-4c84-a25b-c2e35df4fb89",
+   "id": "de3a18e6-add8-4d6d-89f4-2970ae7a48df",
    "metadata": {},
    "execution_count": null
   }
