--- a/code/benchmark.ipynb
+++ b/code/benchmark.ipynb
@@ -46,6 +46,58 @@
    ],
    "id": "a66d74fa-93a0-4a0d-86af-716c9a11e54a",
    "metadata": {}
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime 55.1"
+   ],
+   "id": "c44e0fb9-5a10-4504-8b42-484d5ea2ba0e",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "@btime $55.1"
+   ],
+   "id": "4e7cded9-8c9e-4a25-9968-3caa3ae35411",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "using ProfileSVG"
+   ],
+   "id": "a06cd80c-991c-4d34-b53c-3fbf92d29584",
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "function profile_test(n)\n",
+    "    for i in 1:n\n",
+    "        A = randn(100, 100, 20)\n",
+    "        m = maximum(A)\n",
+    "        Am = mapslices(sum, A; dims = 2)\n",
+    "        B = A[:, :, 5]\n",
+    "        Bsort = mapslices(sort, B; dims = 1)\n",
+    "        b = rand(100)\n",
+    "        C = B .* b\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "@profview profile_test(10)"
+   ],
+   "id": "bcd8be08-ba3f-4818-80c7-b92a33ec7455",
+   "metadata": {},
+   "execution_count": null
   }
  ],
  "nbformat_minor": 5,
